# csad2526KI-405VolodymyrSymanyshyn24

./: .gitignore  CMakeLists.txt  README.md  ci.bat  ci.sh  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
